add search richest recipient script

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
   },
   "plugins": ["prettier"],
   "rules": {
+    "no-plusplus": "off",
+    "no-await-in-loop": "off",
     "prettier/prettier": [
       "error",
       {
