--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aleksand Zotov",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
