--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,5 +8,16 @@ services:
     restart: always
     ports:
       - "9000:9000"
+    depends_on:
+      - db
     volumes:
       - ./src:/webportal_server/src
+  db:
+    image: postgres:11.1
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: '1234'
+    ports:
+      - "9001:5432"
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
